--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {%block content%}
-<h6>UPLOAD MULTIPLE IMAGES NOW</h6>
+<h6>UPLOAD MULTIPLE Files </h6>
 <br>
 <form enctype='multipart/form-data' action="upload/" method='POST' class="dropzone dz" id="my-dropzone" >
     {% csrf_token %}
